pihole/pihole.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-53-tcp
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: "53-tcp"
    port: 53
    targetPort: 53
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-53-udp
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: "53-udp"
    port: 53
    targetPort: 53
    protocol: UDP

---

apiVersion: v1
kind: Service
metadata:
  name: pihole-67-udp
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: "67-udp"
    port: 67
    targetPort: 67
    protocol: UDP
    
---

apiVersion: v1
kind: Service
metadata:
  name: pihole-8080-80-tcp
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:

  - name: "8080-80-tcp"
    port: 8080
    targetPort: 80
    protocol: TCP
